tests/enum_into/compile_fail/variant/invalid_target_enum.stderr
error: target enum `NonExistent` is not specified in this enum's #[enum_into] annotation
 --> tests/enum_into/compile_fail/variant/invalid_target_enum.rs:6:25
  |
6 |     #[enum_into(Target, NonExistent)] // Invalid target enum
  |                         ^^^^^^^^^^^
